2006-09-07  David Hampton  <hampton@employees.org>

	* src/backend/postgres: Include config.h a couple of places.

	* src/engine/gnc-budget.c: Use the glib-compat.h file for backward
	compatible function names.

2006-09-03  Christian Stimming  <stimming@tuhh.de>

	* lib/libqof/qof/qofbackend.h, src/gnome-utils/gnc-file.c,
	src/backend/file/gnc-backend-file.c: If the file type wasn't
	recognized, check whether this failed because of no read
	permission and give appropriate user feedback.

	* src/backend/file/gnc-backend-file.c: Fix error checking for
	non-existing filenames. Will now always give a "file not found"
	message on nonexisting paths or filenames. #351351.

2006-08-20  David Hampton  <hampton@employees.org>

	* src/backend/file/gnc-account-xml-v2.c:
	* src/backend/file/gnc-commodity-xml-v2.c:
	* src/gnome/top-level.c: Remove some conditional code that is no
	longer compiled, or shouldn't be compiled in 2.2.

	* src/gnome/gnc-plugin-page-account-tree.c: Maintain the account
	hierarchy when reparenting the descendants of a deleted account.

2006-08-20  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-dtaus-import.[ch], gnc-plugin-hbci.c:
	Add new HBCI action to File->Import that imports a DTAUS file and
	sends all transfers as HBCI online transfers to the bank.

2006-08-19  David Hampton  <hampton@employees.org>

	* src/gnome/gnucash-desktop*: Update so that bug-buddy 2.16 will
	still allow you to file bugs against gnucash.

	* src/engine/Account.c: Add missing call to xaccAccountBeginEdit.

2006-08-18  David Hampton  <hampton@employees.org>

	* various: Add some 'const' declarations.

2006-08-17  Christian Stimming <stimming@tuhh.de>

	* lib/libqof/qof/qof.h, qofsession.c: Move #include "qofla-dir.h"
	into qofsession.c because this is the only place where it is
	used. Removes an often regenerated dependency from qof.h.

2006-08-15  Christian Stimming <stimming@tuhh.de>

	* src/import-export/hbci/dialog-hbcitrans.c, druid-hbci-initial.c: