@@ -25,3 +25,8 @@
 
 #define GNC_LIBDIR "@-libdir-@"
 
+#define LOCALE_DIR  "@-LOCALE_DIR-@"
+
+#define GNC_ACCOUNTS_DIR "@-GNC_ACCOUNTS_DIR-@"
+#define GNC_GLADE_DIR "@-GNC_GLADE_DIR-@"
+#define GNC_GCONF_DIR "@-GCONF_SCHEMA_CONFIG_SOURCE_DIRONLY-@"
