@@ -1,3 +1,9 @@
+2006-09-07  Christian Stimming  <stimming@tuhh.de>
+
+	* src/engine/gnc-path.h, gnc-path.c: Add new file with utility
+	functions to retrieve the needed directory paths. All compile-time
+	vs. runtime path lookups will be implemented exactly in this file.
+
 2006-09-07  David Hampton  <hampton@employees.org>
 
 	* src/backend/postgres: Include config.h a couple of places.
